<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_view"
        android:text="Hello World!"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/use_system_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view"
        android:text="@string/use_system_player"/>

    <Button
        android:id="@+id/play_in_video_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/use_system_player"
        android:text="@string/play_in_video_view"/>

    <Button
        android:id="@+id/play_in_media_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/play_in_video_view"
        android:text="@string/play_in_media_player"/>

    <VideoView
        android:id="@+id/video_view"
        android:layout_below="@id/play_in_media_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>
